--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "seedrandom": "^3.0.5",
     "typescript": "^3.7.5"
   },
   "scripts": {
