--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/forms": "^4.0.6",
+    "@rebass/preset": "^4.0.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -10,10 +12,14 @@
     "@types/node": "^12.12.28",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/rebass": "^4.0.6",
+    "@types/rebass__forms": "^4.0.2",
     "@types/seedrandom": "^2.4.28",
+    "emotion-theming": "^10.0.27",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "rebass": "^4.0.7",
     "seedrandom": "^3.0.5",
     "typescript": "^3.7.5"
   },
