--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/rebass__forms": "^4.0.2",
     "@types/seedrandom": "^2.4.28",
     "emotion-theming": "^10.0.27",
+    "flowpoints": "^1.0.18",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
