--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "flowpoints": "^1.0.18",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.3",
     "rebass": "^4.0.7",
     "seedrandom": "^3.0.5",
     "typescript": "^3.7.5"
